force-app/main/default/objects/Form_Phrase__c/Form_Phrase__c.object-meta.xml
<CustomObject>
    <description>Identifies a piece of text appearing one or more times in forms. The translations of that text, including English, are stored in a separate object.</description>
    <label>Form Phrase</label>
    <nameField>
        <label>Form Phrase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Phrases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>