force-app/main/default/objects/Form_Phrase__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if this phrase is in active use in one or more forms</description>
    <inlineHelpText>Checked if this phrase is in active use in one or more forms</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>