force-app/main/default/objects/Form_Phrase__c/fields/GM_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>GM_ExternalID__c</fullName>
    <description>ID from FileMaker online apps database</description>
    <externalId>true</externalId>
    <inlineHelpText>ID from FileMaker online apps database</inlineHelpText>
    <label>GM ExternalID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>