force-app/main/default/objects/Form_Phrase__c/fields/Phrase_in_English__c.field-meta.xml
<CustomField>
    <fullName>Phrase_in_English__c</fullName>
    <description>The text of this phrase in English</description>
    <inlineHelpText>The text of this phrase in English</inlineHelpText>
    <label>Phrase in English</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>