force-app/main/default/objects/Form_Phrase__c/fields/Phrase_in_English_trimmed__c.field-meta.xml
<CustomField>
    <fullName>Phrase_in_English_trimmed__c</fullName>
    <description>First 255 characters of the &quot;Phrase in English&quot; field (auto-maintained)</description>
    <inlineHelpText>First 255 characters of the &quot;Phrase in English&quot; field (auto-maintained)</inlineHelpText>
    <label>Phrase in English (trimmed)</label>
    <type>TextArea</type>
</CustomField>