force-app/main/default/objects/Form_Phrase__c/fields/Render_rule__c.field-meta.xml
<CustomField>
    <fullName>Render_rule__c</fullName>
    <description>Special instructions for rendering (if any)</description>
    <inlineHelpText>Special instructions for rendering (if any)</inlineHelpText>
    <label>Render rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide if Latin alphabet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>