force-app/main/default/objects/Form_Phrase__c/listViews/All_GM.listView-meta.xml
<ListView>
    <fullName>All_GM</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Phrase_in_English__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All - GM</label>
</ListView>