force-app/main/default/objects/Form_Phrase__c/listViews/hideIfLatin.listView-meta.xml
<ListView>
    <fullName>hideIfLatin</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Render_rule__c</field>
        <operation>equals</operation>
        <value>Hide if Latin alphabet</value>
    </filters>
    <label>hideIfLatin</label>
</ListView>